tests/NormalTests/paczka1/fuzzy1/74377800.err
Error in line 5: kgFrOJl S411 42,9
Error in line 16: hPj8NRgj4 A47 76,4
Error in line 22: Up5HT8bmT2 A136 58,6
Error in line 25: Up5HT8bmT2 A47 27,6
Error in line 30: Up5HT8bmT2 S411 39,74
Error in line 19: hPj8NRgj4 A136 44,3
Error in line 29: Up5HT8bmT2 A136 88,7
Error in line 36: Up5HT8bmT2 S411 71,7
